--- a/src/movies/views/movies.html
+++ b/src/movies/views/movies.html
@@ -27,7 +27,7 @@
 
     <div class="panel-body">
 
-        <hero-block ng-repeat="hero in heroes.results | orderBy: query.order" hero="hero"></hero-block>
+        <movie-block ng-repeat="movie in movies.results | orderBy: query.order" movie="movie"></movie-block>
 
     </div>
 
