vue série + amélioration movie

--- a/src/movies/views/movies.html
+++ b/src/movies/views/movies.html
@@ -2,7 +2,7 @@
 
 
     <div class="panel-heading">
-        <h3 class="panel-title panel-title title--inline">Liste des Films Populaires</h3>
+    <h3 class="panel-title panel-title title--inline">Liste des Films Populaires | <a href="#/films">Films</a> | <a href="#/series">Series</a> </h3>
         <span class="dropdown pull-right">
             <a href="" class="dropdown-toggle" data-toggle="dropdown">Filtrer <span class="caret"></span></a>
             <ul class="dropdown-menu">
