--- a/src/movies/views/series.html
+++ b/src/movies/views/series.html
@@ -1,12 +1,17 @@
 <div class="panel panel-primary">
 
+    <form >
+        <select>
+        <option  ng-repeat="(key, genre) in genreList.genres" value="{{genre.id}}">{{genre.name}}</option>
+        </select>
+
+    </form>
 <div class="panel-heading">
     <h3 class="panel-title panel-title title--inline">Liste des Films Populaires | <a href="#/films">Films</a> | <a href="#/series">Series</a> </h3>
    
     </div>
 
     <div class="panel-body">
-
       <div class="col-sm-6 col-md-4" ng-repeat="serie in series.results" >
     <div class="pull-right" ng-switch on="movie.status">
         <span ng-switch-when="0" class="label label-success">Disponible</span>
